# internal/handler/transaksi_handler.go
@@ -12,6 +12,13 @@ type TransaksiHandler struct {
 	Service *service.TransaksiService
 }
 
+// UserHistory godoc
+// @Summary Riwayat transaksi user
+// @Tags Transaksi
+// @Security BearerAuth
+// @Param status query string false "Filter Status"
+// @Success 200 {object} map[string]interface{}
+// @Router /transaksi [get]
 func (h *TransaksiHandler) UserHistory(c *gin.Context) {
 
 	userID := c.GetString("user_id")
@@ -38,6 +45,13 @@ func (h *TransaksiHandler) UserHistory(c *gin.Context) {
 	})
 }
 
+// Detail godoc
+// @Summary Detail transaksi
+// @Tags Transaksi
+// @Security BearerAuth
+// @Param id path string true "Transaksi ID"
+// @Success 200 {object} map[string]interface{}
+// @Router /transaksi/{id} [get]
 func (h *TransaksiHandler) Detail(c *gin.Context) {
 
 	id := c.Param("id")
@@ -51,6 +65,11 @@ func (h *TransaksiHandler) Detail(c *gin.Context) {
 	c.JSON(http.StatusOK, data)
 }
 
+// AdminHistory godoc
+// @Summary Riwayat transaksi masuk (Admin Apotek)
+// @Tags Admin Transaksi
+// @Security BearerAuth
+// @Router /admin/transaksi [get]
 func (h *TransaksiHandler) AdminHistory(c *gin.Context) {
 
 	adminID := c.GetString("user_id")
@@ -77,6 +96,11 @@ func (h *TransaksiHandler) AdminHistory(c *gin.Context) {
 	})
 }
 
+// SuperAdminHistory godoc
+// @Summary Riwayat transaksi masuk (Admin Apotek)
+// @Tags Admin Transaksi
+// @Security BearerAuth
+// @Router /admin/transaksi [get]
 func (h *TransaksiHandler) SuperAdminHistory(c *gin.Context) {
 
 	status := c.Query("status")
@@ -99,4 +123,4 @@ func (h *TransaksiHandler) SuperAdminHistory(c *gin.Context) {
 			"total_page": totalPage,
 		},
 	})
-}	
+}
